--- a/_posts/2018-03-22-web.md
+++ b/_posts/2018-03-22-web.md
@@ -43,12 +43,9 @@ Smarty简介
 > 
 > CVE-ID : CVE-2017-1000480
 
-
-
-由于未对用户的输入点进行过滤，导致经过eval函数，造成代码执行
+产生原因：由于未对用户的输入点进行过滤，导致经过eval函数，造成代码执行
 
 测试Payload：
-
 
 ```
 */phpinfo();/*
@@ -60,7 +57,12 @@ Smarty简介
 
 ### Java Struts2 （S2-045）
 
-由于未对用户输入点进行过滤，被带入ErrorMessage，当做OGLN表达式解析，造成代码执行
+Struts 简介
+
+> Struts2是一个基于MVC设计模式的Web应用框架，它本质上相当于一个servlet，在MVC设计模式中，Struts2作为控制器(Controller)来建立模型与视图的数据交互。Struts 2是Struts的下一代产品，是在 struts 1和WebWork的技术基础上进行了合并的全新的Struts 2框架。
+> CVE-ID : CVE-2017-5638
+
+产生原因：由于未对用户输入点进行过滤，被带入ErrorMessage，当做OGLN表达式解析，造成代码执行
 
 测试Payload：
 
