--- a/_posts/2018-03-22-web.md
+++ b/_posts/2018-03-22-web.md
@@ -14,7 +14,7 @@ description: "《Web安全测试学习手册》- 远程代码执行"
 
 ### 1）什么是远程代码执行
  
-远程命令执行 英文名称：**RCE remote code execution** ，简称**RCE**漏洞，是指用户通过浏览器提交执行命令，由于服务器端没有针对执行函数做过滤，导致在没有指定绝对路径的情况下就执行命令，可能会允许攻击者通过改变 $PATH 或程序执行环境的其他方面来执行一个恶意构造的代码。
+远程命令执行 英文名称：**RCE (remote code execution)** ，简称**RCE**漏洞，是指用户通过浏览器提交执行命令，由于服务器端没有针对执行函数做过滤，导致在没有指定绝对路径的情况下就执行命令，可能会允许攻击者通过改变 $PATH 或程序执行环境的其他方面来执行一个恶意构造的代码。
 
 ### 2）远程代码执行的特点
 
